# SNU-CV-Project

./: .gitignore  LucasKanade.py  README.md
.github/workflows/: Environment setup  environment_setup.yml
data/: action_video_test.mov
frontend/: index.html
ml/detection/: .gitignore  README.md  demo.ipynb  detector.py  main.py  requirements.txt  tracker.py  utils.py
ml/detection/data/: test_short_video.mov
ml/detection/tracker/parameters/: default.json
trackers/algorithmic_tracker_by_detection/: README.md  detector.py
trackers/algorithmic_tracker_by_detection/detector/: README.md  requirements.txt
trackers/algorithmic_tracker_by_detection/tracker/: CMakeLists.txt  main.cpp
trackers/algorithmic_tracker_by_detection/tracker/include/: config.h.in  tracker.hpp  utils.hpp
trackers/algorithmic_tracker_by_detection/tracker/parameters/: default.json  short_test_video.json
trackers/lucas_kanade/: lukas_kanade.py
